--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import '../styles/theme.css';
 @import url("/assets/css/vendor/gicons.css");
 @import url("/assets/css/plugins/animate.css");
 @import "bootstrap/dist/css/bootstrap.min.css";
